--- a/ADO_NET_first_lab/MainWindow.xaml
+++ b/ADO_NET_first_lab/MainWindow.xaml
@@ -1,45 +1,7 @@
 ﻿<Window x:Class="ADO_NET_first_lab.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ADO_NET_first_lab"
-        mc:Ignorable="d"
         Title="Students Grades" Height="450" Width="800">
-    <Window.Resources>
-        <!-- Style for TextBox with Placeholder -->
-        <Style x:Key="PlaceholderTextBox" TargetType="TextBox">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                Background="{TemplateBinding Background}"
-                                Padding="{TemplateBinding Padding}">
-                            <Grid>
-                                <TextBlock x:Name="PlaceholderTextBlock"
-                                           Text="{TemplateBinding Tag}"
-                                           Foreground="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}"
-                                           Visibility="Collapsed"/>
-                                <ScrollViewer x:Name="PART_ContentHost"
-                                              Focusable="false"
-                                              HorizontalScrollBarVisibility="Hidden"
-                                              VerticalScrollBarVisibility="Hidden"/>
-                            </Grid>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <MultiTrigger>
-                                <MultiTrigger.Conditions>
-                                    <Condition Property="Text" Value=""/>
-                                </MultiTrigger.Conditions>
-                                <Setter TargetName="PlaceholderTextBlock" Property="Visibility" Value="Visible"/>
-                            </MultiTrigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -52,15 +14,36 @@
         </Grid.RowDefinitions>
 
         <!-- DataGrid для відображення даних -->
-        <DataGrid x:Name="dgStudents" Grid.Row="0" Grid.ColumnSpan="2" AutoGenerateColumns="True" Background="White"/>
+        <DataGrid x:Name="dgStudents" Grid.Row="0" Grid.ColumnSpan="2" AutoGenerateColumns="True"
+                  Background="White"/>
 
         <!-- Панель для введення нового студента -->
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <TextBox x:Name="tbFullName" Width="150" Margin="10" Tag="Full Name" Style="{StaticResource PlaceholderTextBox}"/>
-            <TextBox x:Name="tbGroupName" Width="150" Margin="10" Tag="Group Name" Style="{StaticResource PlaceholderTextBox}"/>
-            <TextBox x:Name="tbAverageGrade" Width="50" Margin="10" Tag="Avg Grade" Style="{StaticResource PlaceholderTextBox}"/>
-            <TextBox x:Name="tbMinSubject" Width="150" Margin="10" Tag="Min Subject" Style="{StaticResource PlaceholderTextBox}"/>
-            <TextBox x:Name="tbMaxSubject" Width="150" Margin="10" Tag="Max Subject" Style="{StaticResource PlaceholderTextBox}"/>
+            <TextBox x:Name="tbFullName" Width="150" Margin="10">
+                <TextBox.ToolTip>
+                    <ToolTip Content="Full Name"/>
+                </TextBox.ToolTip>
+            </TextBox>
+            <TextBox x:Name="tbGroupName" Width="150" Margin="10">
+                <TextBox.ToolTip>
+                    <ToolTip Content="Group Name"/>
+                </TextBox.ToolTip>
+            </TextBox>
+            <TextBox x:Name="tbAverageGrade" Width="50" Margin="10">
+                <TextBox.ToolTip>
+                    <ToolTip Content="Avg Grade"/>
+                </TextBox.ToolTip>
+            </TextBox>
+            <TextBox x:Name="tbMinSubject" Width="150" Margin="10">
+                <TextBox.ToolTip>
+                    <ToolTip Content="Min Subject"/>
+                </TextBox.ToolTip>
+            </TextBox>
+            <TextBox x:Name="tbMaxSubject" Width="150" Margin="10">
+                <TextBox.ToolTip>
+                    <ToolTip Content="Max Subject"/>
+                </TextBox.ToolTip>
+            </TextBox>
             <Button Content="Add Student" Width="100" Margin="10" Click="Button_Click"/>
         </StackPanel>
     </Grid>
